fixed layout issues and created store and reducer

--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,11 @@
     justify-content: space-between;
     margin-top: 200px;
 }
+
+@media (max-width: 980px) {
+    .main {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+}
