--- a/src/components/Counter/Counter.css
+++ b/src/components/Counter/Counter.css
@@ -30,6 +30,7 @@
     flex-direction: column;
     align-items: center;
     box-sizing: border-box;
+    padding: 10px;
 }
 
 .NumWrap {
@@ -57,5 +58,22 @@
     text-decoration: none;
     padding-left: 20px;
     padding-right: 10px;
+    box-sizing: border-box;
+}
+.counterV2 {
+    color: rebeccapurple;
+    padding-left: 10px;
+    padding-right: 20px;
+    box-sizing: border-box;
+}
+
+.set {
+    border-radius: 3px;
+    color: black;
+    width: 100px;
+    display: flex;
+    background-color: hotpink;
+    justify-content: center;
+    margin-top: 10px;
     box-sizing: border-box;
 }
